--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:SEeLTgPwsVpnghkcZDj1c8//J3bM9zZy5BXGFnEBjTM=
 APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=dbname
+DB_DATABASE=./data/database.sqlite
 DB_USERNAME=root
 DB_PASSWORD=root
 
